G'MIC: Activate the newest added layer

BUG: 453478